@@ -12,6 +12,8 @@ Fix lines falling between the cracks in extract (calling rasterzeLines): https:/
 allow setting a 'spatial window'
 
 --- current version
+Bug fixes:
+The order of the layers returned by stackApply was only as expected of the indices were sorted from 1 to n. Reported by Mark R Payne
 
 
 --- 10-December-2015, version: 2.4-30
